Fixes issue 91
git-svn-id: https://svn.apache.org/repos/asf/incubator/syncope/branches/0_5_X@1246906 13f79535-47bb-0310-9956-ffa450edef68